# scout

./: Cargo.toml  Makefile  README.md  bazaar.yaml  bazaar_partials.yaml  circle.yml  eth.yaml  executor.yaml  keccak-lys.yaml  mimc-stark-verifier.yml  smpt.yaml  snark-verifier.yaml  test.yaml  zk.yaml
scripts/balls/: Cargo.toml  chisel.toml
scripts/balls/src/: lib.rs
scripts/bazaar/: Cargo.toml  chisel.toml
scripts/bazaar/src/: lib.rs
scripts/bazaar_partials/: Cargo.toml  chisel.toml
scripts/bazaar_partials/src/: lib.rs
scripts/eth/: Cargo.toml  chisel.toml
scripts/eth/contracts/adder/: Cargo.toml  adder.wasm  chisel.toml
scripts/eth/contracts/adder/src/: lib.rs
scripts/eth/src/: lib.rs
scripts/executor/: Cargo.toml  chisel.toml
scripts/executor/contracts/kvstore/: Cargo.toml  chisel.toml
scripts/executor/contracts/kvstore/src/: lib.rs
scripts/executor/src/: lib.rs
scripts/helloworld/: Cargo.toml  chisel.toml
scripts/helloworld/src/: lib.rs
scripts/keccak-lys/: Makefile  README.md  eth2.lys  main.lys
scripts/mimc-stark-verifier/: Cargo.toml  chisel.toml
scripts/mimc-stark-verifier/src/: lib.rs
scripts/smpt/: .gitignore  Cargo.toml  Makefile  chisel.toml
scripts/smpt/relayer/: index.js  package.json
scripts/smpt/src/: account.rs  keccak_hasher.rs  lib.rs  rlp_node_codec.rs  sig.rs  tx.rs
scripts/snark-verifier/: Cargo.toml  chisel.toml
scripts/snark-verifier/src/: lib.rs
scripts/zk/: Cargo.toml  chisel.toml
scripts/zk/src/: lib.rs
src/: main.rs  types.rs
