[package]
name = "phase2-scout"
version = "0.0.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/scout"
description = "Eth 2.0 Phase 2 execution prototyping engine"
publish = false
edition = "2018"

[dependencies]
wasmi = "0.5"
rustc-hex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.7"
primitive-types = "0.6"
ssz = "0.1.2"
ssz-derive = "0.1.2"
criterion = "0.2"

[[bench]]
name = "scout_bench"
harness = false
