[package]
name = "phase2-bazaar"
version = "0.0.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/scout"
description = "Eth 2.0 Phase 2 execution script: Bazaar message board"
publish = false
edition = "2018"

[dependencies]
ewasm_api = { version = "0.11", features = ["std", "eth2", "qimalloc"] }
ssz = "0.1.2"
ssz-derive = "0.1.2"
sha3 = "^0.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = 3
