[package]
name = "eth"
version = "0.0.0"
authors = ["Matt Garnett <14004106+c-o-l-o-r@users.noreply.github.com>"]
publish = false
edition = "2018"

[dependencies]
ewasm_api = { git = "https://github.com/c-o-l-o-r/ewasm-rust-api", branch = "add-exec-code" }
ssz = "0.1.2"
ssz-derive = "0.1.2"
sha3 = "^0.6"

[lib]
crate-type = ["cdylib"]
