[package]
name = "executor"
version = "0.0.0"
authors = ["Matt Garnett <14004106+c-o-l-o-r@users.noreply.github.com>"]
publish = false
edition = "2018"

[dependencies]
ewasm_api = { git = "https://github.com/c-o-l-o-r/ewasm-rust-api", rev = "b10cba54fe6fba8c782a70e1280985421d35cf9a", features = ["eth2"] }
ssz = "0.1.2"
ssz-derive = "0.1.2"
sha3 = "^0.6"
hex = "0.3.2"

[lib]
crate-type = ["cdylib"]
