[package]
name = "phase2-helloworld"
version = "0.0.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/scout"
description = "Eth 2.0 Phase 2 execution script: Hello World"
publish = false
edition = "2018"

[dependencies]
ewasm_api = { version = "0.11", features = ["std", "eth2", "qimalloc", "debug"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
