[package]
name = "phase2-zk"
version = "0.0.0"
license = "Apache-2.0"
repository = "https://github.com/ewasm/scout"
description = "Eth 2.0 Phase 2 execution script: zk"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bellman_ce = "0.3"
pairing_ce = "0.17"
ssz = "0.1.2"
ssz-derive = "0.1.2"

[dependencies.ewasm_api]
git = "https://github.com/ewasm/ewasm-rust-api"
rev = "1c01982"
default-features = false
features = ["std", "eth2", "wee_alloc"]

[profile.release]
lto = true
debug = false
