[package]
name = "adder"
version = "0.1.0"
authors = ["Matt Garnett <14004106+c-o-l-o-r@users.noreply.github.com>"]
edition = "2018"

[dependencies]
ewasm_api = { git = "https://github.com/c-o-l-o-r/ewasm-rust-api", rev = "65b5316d0a0ae78e94be4c5d3153231cbc6653f1", features = ["eth2"] }

[lib]
crate-type = ["cdylib"]
